--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@nuxt/image": "^1.11.0",
     "@nuxtjs/color-mode": "^3.5.2",
     "@nuxtjs/tailwindcss": "^6.14.0",
+    "@tailwindcss/typography": "^0.5.19",
+    "better-sqlite3": "^12.4.1",
     "clsx": "^2.1.1",
     "nuxt": "^4.1.2",
     "vue": "^3.5.22",
